challengeePlus - ajuste em padding right na classe .icons, dentro da media querie 768px <

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -144,13 +144,17 @@ html, body {
     }
 
     .logo-agency{
-       width:60%;
-       height:60%;
+       width:80%;
+       height:80%;
         
     }
 
     .div-logo{
         display:flex;
         justify-content: center;
+    }
+
+    .icons{
+        padding-right: 0;
     }
   }
