--- a/src/css/style.css
+++ b/src/css/style.css
@@ -84,6 +84,7 @@ html, body {
   display:flex;
   justify-content: space-between;
   padding-right:15px;  
+  cursor:pointer;
 
 }
 
@@ -102,26 +103,31 @@ html, body {
 
 .bloco-buy{
   margin-right:15px;
+  
 }
 
-.box-buy{
+.boxBuy{
   width:320px;
-  height:400px;
-  background-color:red;
+  height:380px;
+  background-color:#F0F0F0;
   position: relative;
   display:none;
+ 
+ 
 }
 
 
-.box-buy::before {
+
+
+.boxBuy::before {
   content: '';
   width: 0; 
   height: 0; 
   border-left: 20px solid transparent;
   border-right: 20px solid transparent;
-  border-bottom: 20px solid #fc0;
+  border-bottom: 20px solid #F0F0F0;
   margin-top:-20px;
-  margin-left:260px;
+  margin-left:255px;
   position: absolute;
 }
 
@@ -132,8 +138,74 @@ html, body {
 .ativo{
   display:block;
 }
+.inativo{
+  display: none
+}
+
+.products{
+  width:100%;
+  height:80%;
+  background-color:#F0F0F0;
+}
 
 
+
+::-webkit-scrollbar-track {
+  background-color: #DDDDDD;
+}
+::-webkit-scrollbar {
+  width: 6px;
+  background: #DDDDDD;
+}
+::-webkit-scrollbar-thumb {
+  background: #717171;
+  width:30px;
+}
+
+
+.scroll{
+  overflow-x: hidden;
+  overflow-y: scroll;
+  height:100%;
+}
+
+.blocoPreco{
+  display: flex;
+  align-items: flex-end;
+}
+
+.preco{
+  background-color:#E6E6E6;
+  width:100%;
+  height:60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size:14px;
+}
+
+.precoValor{font-weight: bold; font-size:16px;}
+
+.precoValor{
+  text-align: center;
+  line-height: 30px;
+}
+
+.blocoButton{
+  display: flex;
+  align-items: flex-end;
+}
+
+.btnComprar{
+  border:0;
+  background-color:#00BC0E;
+  width:100%;
+  height:60px;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 800;
+  color:#ffffff;
+}
 
 
 @media (max-width: 768px) {
@@ -200,16 +272,6 @@ html, body {
     }
 
     .icons{
-<<<<<<< HEAD
         padding-right: 0;
     }
-=======
-      padding-right:0px; 
-    }
-
-    #menu-toggle{
-      width:100%;
-    }
-
->>>>>>> 0b8b719554a88d234eb3cd4b5d64f2eecdb1c012
   }
