--- a/src/css/style.css
+++ b/src/css/style.css
@@ -102,6 +102,7 @@ html, body {
 }
 
 .bloco-buy{
+  margin-top:0px;
   margin-right:15px;
   
 }
@@ -123,11 +124,11 @@ html, body {
   content: '';
   width: 0; 
   height: 0; 
-  border-left: 20px solid transparent;
-  border-right: 20px solid transparent;
-  border-bottom: 20px solid #F0F0F0;
-  margin-top:-20px;
-  margin-left:255px;
+  border-left: 12px solid transparent;
+  border-right: 12px solid transparent;
+  border-bottom: 12px solid #F0F0F0;
+  margin-top:-12px;
+  margin-left:265px;
   position: absolute;
 }
 
@@ -181,7 +182,7 @@ html, body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size:14px;
+  font-size:16px;
 }
 
 .precoValor{font-weight: bold; font-size:16px;}
@@ -273,5 +274,9 @@ html, body {
 
     .icons{
         padding-right: 0;
+    }
+
+    .boxBuy::before {
+      margin-left:280px;
     }
   }
