--- a/src/css/style.css
+++ b/src/css/style.css
@@ -208,6 +208,68 @@ html, body {
   color:#ffffff;
 }
 
+.img-compras{
+  width:100px;
+  height:100px;
+  
+}
+
+.paddingCompras{
+  padding-left:15px;
+  padding-top:20px;
+
+}
+
+.innerCompras{
+  display:flex;
+  align-items: center;
+  margin-left:10px;
+  margin-right: 10px;
+  padding-bottom:20px;
+  border-bottom:0.5px solid #cccccc;
+
+}
+
+
+.cortar{
+  height:45px;
+  width:140px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.nomeProduto{
+  margin-left:20px;
+  text-overflow: ellipsis;
+  font-size:8pt;
+}
+
+.flexDescription{
+  display:flex;
+  margin-left:20px;
+  justify-content: space-between;
+  width:100%;
+}
+
+.descriptionCompras{
+  margin-right:30px;
+}
+
+.precoProduto{
+  color:#00BC0E;
+  font-weight: bold;
+  font-size:10pt;
+}
+
+.qtdProduto{
+  color:#000000;
+  font-size:10pt;
+}
+
+.nomeProduto:after{
+  content: '...'
+}
+
 
 @media (max-width: 768px) {
     .menu-button-container {
