--- a/src/css/style.css
+++ b/src/css/style.css
@@ -76,7 +76,8 @@ html, body {
 
 
 .logo-agency{
-    
+  width:90%;
+  height:90%;
 }
 
 .icons{
@@ -248,6 +249,7 @@ html, body {
   display:flex;
   margin-left:20px;
   justify-content: space-between;
+  align-items: center;
   width:100%;
 }
 
